--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,9 @@
     "prettier"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function" : "off"
   },
   "settings": {
     "import/resolver": {
